# AI_Project

./: CMakeLists.txt  README.md  gesture_receiver_continuous.py  gesture_receiver_simple.py
arduino_simple_filtered/: arduino_simple_filtered.ino
hand-gesture-recognition-mediapipe/: app.py  bt_sender.sh  keypoint_classification.ipynb  keypoint_classification_EN.ipynb  new_model.keras  point_history_classification.ipynb
hand-gesture-recognition-mediapipe/.ipynb_checkpoints/: keypoint_classification-checkpoint.ipynb  point_history_classification-checkpoint.ipynb
hand-gesture-recognition-mediapipe/model/keypoint_classifier/: keypoint_classifier.keras  keypoint_classifier.py  keypoint_classifier.tflite  keypoint_classifier_label.csv
hand-gesture-recognition-mediapipe/model/point_history_classifier/: point_history_classifier.keras  point_history_classifier.py
include/: I2C.h  Serial.h
src/: I2C.cpp  I2C_stub.cpp  ObstacleDetector.cpp  ObstacleDetector.h  Serial.cpp  controller.cpp  controller.h  lidar.cpp  lidar.h  main.cpp  main.cpp.backup  test_obstacle_detector.cpp
